crates/mermaid-text/tests/snapshots/snapshots__sequence_with_loop_block.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐      ┌──────┐
 │  A   │      │  B   │
 └──────┘      └──────┘
     ┆             ┆
╔═[loop]══[forever]═════╗
║    ┆ tick        ┆    ║
║    ──────────────▸    ║
║    ┆             ┆    ║
╚═══════════════════════╝
     ┆             ┆
 ┌──────┐      ┌──────┐
 │  A   │      │  B   │
 └──────┘      └──────┘
