crates/mermaid-text/tests/snapshots/snapshots__sequence_with_opt_block.snap
---
source: crates/mermaid-text/tests/snapshots.rs
expression: out
---
 ┌──────┐        ┌──────┐
 │  A   │        │  B   │
 └──────┘        └──────┘
     ┆ hi            ┆
     ────────────────▸
     ┆               ┆
╔═[opt]══[cache hit]══════╗
║    ┆ cached        ┆    ║
║    ◂────────────────    ║
║    ┆               ┆    ║
╚═════════════════════════╝
     ┆               ┆
 ┌──────┐        ┌──────┐
 │  A   │        │  B   │
 └──────┘        └──────┘
